Fix for bug 20, #content items now have word-wrap: break property to create wrapping

--- a/themes/lizard/css/screen.css
+++ b/themes/lizard/css/screen.css
@@ -120,11 +120,12 @@ em {
 #content
 {
 	font-size: 18pt;
-	overflow: auto;
+	overflow: hidden;
 	padding-right: 20px;
 	padding-left: 20px;
 	padding-top: 10px;
 	padding-bottom: 50px;
+	word-wrap: break-word;
 }
 
 #content h1 
